--- a/style.css
+++ b/style.css
@@ -16,15 +16,7 @@ body {
     margin-top: 100px;
 }
 
-textarea {
-    border-radius: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    width: 100%;
-    max-width: 500px;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-}
+
 
 textarea::placeholder {
     color: #999;
@@ -48,7 +40,24 @@ textarea::placeholder {
 .promptButton:hover {
     transform: scale(1.02);
 }
-
+#text {
+    width:250%;
+	overflow:hidden;
+	background-color:#FFF;
+	color:#222;
+	font-family:Courier, monospace;
+	font-weight:normal;
+	font-size:18px;
+	resize:none;
+	line-height:40px;
+	background-repeat:repeat-y, repeat;
+	-webkit-border-radius:12px;
+	border-radius:12px;
+	-webkit-box-shadow: 0px 2px 14px #000;
+	box-shadow: 0px 2px 14px #000;
+	border-top:1px solid #FFF;
+	border-bottom:1px solid #FFF;
+}
 .button-container {
     display: flex;
     justify-content: center;
