--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ src: url(fonts/Inter_18pt-ExtraLight.ttf);
 .form-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin-top: 100px;
     width: 500px;
 }
@@ -113,6 +112,8 @@ textarea::placeholder {
     margin-top: 10px; /* Adds space between textarea and button */
     cursor: pointer;
     border: none;
+    margin-left: auto;
+    
 }
 .textarea-button-container {
     display: flex;
@@ -150,7 +151,6 @@ nav .logo a {
     font-size: 30px;
     font-weight: 600;
     text-decoration: none;
-    margin-left: 48px
 }
 
 
@@ -327,4 +327,18 @@ transform: translate(0, -11px) rotate(45deg);
 .container2{
     display: inline-block;
     cursor: pointer;
+}
+
+.examples-container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    text-align: center;
+    color: white;
+    gap: 20px; /* Adds space between the videos */
+}
+
+.example {
+    text-align: center;
+    flex-basis: 30%; /* Adjust the percentage based on the number of videos */
 }
